@@ -3,6 +3,10 @@
 # If you change the seed, you will have to recreate ttconfig.data as well.
 datagen_seed = schooltool-m4
 
+libpkg=libschooltool-server
+package=schooltool-server
+common=$(package)
+
 build: build-stamp
 
 build-stamp:
@@ -41,18 +45,37 @@ install-stamp: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-
+	#make server libary
 	# what about ZConfig/doc/schema.dtd? zconfig.pdf?
 	cd src && \
 	find \( -name tests -o -name ftests -o -name clients \) -prune -o \
-	     \( -name '*.py' -o -name '*.so' -o -name '*.pt' -o \
+	     \( -name '*.so' \) \
+	     -exec install -m 644 -D -p {} \
+		../debian/$(libpkg)/usr/lib/$(libpkg)/{} \;
+	#make common
+	# move directories with architecture independent files into usr/share
+	cd src && \
+	find \( -name tests -o -name ftests -o -name clients \) -prune -o \
+	     \( -name '*.py'  -o -name '*.pt' -o \
 	        -name '*.xml' -o -name '*.rng' -o -name '*.png' -o \
 		-name '*.xpm' -o -name '*.css' \) \
 	     -exec install -m 644 -D -p {} \
-		../debian/schooltool-server/usr/lib/schooltool-server/{} \;
-
-	rm -f debian/schooltool-server/usr/lib/schooltool-server/trace.py
-
+		../debian/$(common)/usr/share/$(common)/{} \;
+	
+	# make symlinks from .so files to /usr/share
+	cd debian/$(libpkg)/usr && \
+	find lib -iname '*.so' | \
+	    while read w; do\
+		tmp=`echo $$w | sed s/$(libpkg)/$(common)/`;\
+		tmp2=`dirname ../../$(common)/usr/share$${tmp:3}`;\
+		install -m 755 -d $$tmp2;\
+		cd $$tmp2;\
+		ln -s `echo $${w:4}|sed s/[^/]*/../g`/$$w;\
+		cd - ;\
+	    done
+	
+	rm -f debian/$(common)/usr/share/$(common)/trace.py
+		
 	cd src && \
 	find zope/interface schooltool/clients \
 	     \( -name 'tests' -o -name 'ftests' \) -prune -o\
@@ -74,7 +97,7 @@ install-stamp: build
 	done
 
 	install -m 755 -D -p debian/schooltool-server.py \
-		debian/schooltool-server/usr/bin/schooltool-server; \
+		debian/$(common)/usr/bin/schooltool-server; \
 	for p in schooltool-client wxschooltool import-sampleschool; do \
 	    install -m 755 -D -p debian/$$p \
 		    debian/schooltool-clients/usr/bin/$$p; \
@@ -82,6 +105,7 @@ install-stamp: build
 
 	install -m 644 -D -p debian/schooltool.conf \
 	    debian/schooltool-server/etc/schooltool.conf
+	# the following are soon to disapear
 	install -m 644 -D -p debian/schooltool-server.default \
 	    debian/schooltool-server/etc/default/schooltool
 	install -m 644 -D -p debian/example.conf \
